<resources>
    <!-- Generics -->
    <string name="app_name">Appisodes</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="large_screen">large-screen</string>
    <string name="share_medoa">Share media!</string>

    <!-- Login Strings -->
    <string name="sign_in_methods">Sign in using the following:</string>
    <string name="trakt">Trakt.tv</string>
    <string name="guest">Guest</string>
    <string name="copy_code">Copy the following code</string>
    <string name="authenticate_trakt">And authenticate in Trakt.tv</string>
    <string name="authenticate">Go Trakt.tv</string>
    <string name="authorization_time_out">You didn\'t verified Appisodes :(</string>
    <string name="authorization_denied">You denied Appisodes :\'(</string>
    <string name="authorization_success">Woohoo! Welcome to Appisodes!</string>

    <!-- Menu options -->
    <string name="home_menu">Home</string>
    <string name="series_menu">My series</string>
    <string name="movies_menu">My movies</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <!-- Trending -->
    <string name="trending">Trending</string>

    <!-- Seasons -->
    <string name="season_number" formatted="false">Season %s</string>

</resources>
