<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_item"
        android:checkableBehavior="single"
        android:orderInCategory="0">
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu"/>
        <item
            android:id="@+id/series_item"
            android:icon="@drawable/ic_tv"
            android:title="@string/series_menu"/>
        <item
            android:id="@+id/movies_item"
            android:icon="@drawable/ic_movie"
            android:title="@string/movies_menu"/>
    </group>

    <item
        android:orderInCategory="2"
        android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/log_out_item"
                android:icon="@drawable/ic_power"
                android:title="@string/log_out"/>
        </menu>
    </item>

</menu>