<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.movile.appisodes.controllers.login.GenerateCodeActivity">

    <LinearLayout
        android:id="@+id/header_ll"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_content_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.movile.appisodes.custom_views.font.RobotoTextView
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/copy_code"
            android:textColor="@color/white"/>

        <com.movile.appisodes.custom_views.font.RobotoTextView
            android:id="@+id/code_rtv"
            style="@style/Display2Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="12345678"
            android:textColor="@color/white"
            android:textIsSelectable="true"/>

        <com.movile.appisodes.custom_views.font.RobotoTextView
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/authenticate_trakt"
            android:textColor="@color/white"/>

        <com.movile.appisodes.custom_views.font.RobotoTextView
            android:id="@+id/go_trakt_rtv"
            style="@style/ButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button_selector"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp"
            android:text="@string/authenticate"
            android:textAllCaps="true"
            android:textColor="@color/white"/>

    </LinearLayout>

    <include
        layout="@layout/progress_wheel_std"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/footer_ll"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">
    </LinearLayout>

</RelativeLayout>
